--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-# <!-- Managed automatically by PreTeXt authoring tools -->
-pretext == 2.11.4
+# This file was automatically generated with PreTeXt 2.25.1.
+pretext == 2.25.1
